--- a/pianoroll/style/roll.scss
+++ b/pianoroll/style/roll.scss
@@ -24,7 +24,7 @@ $ScrollBarHeight : 25px;
 			display: inline;
 			position: absolute;
 			width: 100%;
-			height: 100%;
+			height: 50%;
 			top: 0px;
 			left: 0px;
 			// margin-left: 50%;
@@ -40,7 +40,7 @@ $ScrollBarHeight : 25px;
 		$width: 3px;
 		position: absolute;
 		left: calc(50% - #{$width / 2});
-		height: 100%;
+		height: 50%;
 		background-color: black;
 		width: $width;
 		z-index: 2;
@@ -50,12 +50,12 @@ $ScrollBarHeight : 25px;
 
 	#ScoreCanvas {
 		width: 100%;
-		height: 100%;
+		// height: 100%;
 		position: absolute;
 		top: 0px;
 		left: 0px;
 		z-index: 0;
 		// background-color: blue;
-		height: calc(100% - #{$ScrollBarHeight});
+		height: calc(50% - #{$ScrollBarHeight});
 	}
 }
